[tool.poetry]
name = "pyfreqt"
version = "0.1.0"
description = "Frequent subtree mining based on FREQT algorithm (Asai, 2001)"
authors = ["Adriaan Lemmens <lemontheme@gmail.com>"]
license = "MIT"
packages = [
    { include = "pyfreqt", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0"
ujson = "^5.3"
lmdb = "^1.3.0"
tqdm = "^4.64.0"
msgpack = "^1.0.4"

[tool.poetry.dev-dependencies]
pyinstrument = "^4.1.1"
memory-profiler = "^0.60.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
